crates/plotnik-tests/tests/03-analyze/definitions/error_anchor_only_body.txt
Q = .
------------------ DIAGNOSTICS -------------------
error: `Q` cannot be an entry point because its body does not match exactly one root node
 --> query.ptk:1:1
  |
1 | Q = .
  | ^
  |
help: make `Q` match exactly one node, with any anchors or field constraints inside that node pattern
-------------------- SYMBOLS ---------------------
